Fixing scrollbar offset

--- a/style.css
+++ b/style.css
@@ -26,14 +26,14 @@ body {
 }
 
 .progress-container {
-  margin-left: 0px;
+  margin-left: -50px;
   width: 100%;
   height: 8px;
   background: #ccc;
 }
 
 .progress-bar {
-  margin-left: 0px;
+  margin-left: -50px;
   height: 8px;
   background: #04aa6d;
   width: 0%;
